Backport of Migration, JEI Support, and Custom Recipe Systems